fixed spacing in shot menu

--- a/src/components/button-components/button/button.scss
+++ b/src/components/button-components/button/button.scss
@@ -2,6 +2,7 @@
 
 .button-wrapper {
     @include flex(row, center, true);
+    width: fit-content;
 }
 
 .button-icon {
