--- a/src/components/header/shot-menu-header/shot-menu-header.scss
+++ b/src/components/header/shot-menu-header/shot-menu-header.scss
@@ -7,6 +7,7 @@
     min-height: 8rem;
     border-radius: $borderRadiusDefault;
     box-shadow: $boxShadowDefault;
+    width: 98vw;
 
 }
 
