--- a/src/components/shot-menu/shot-menu-wrapper/shot-menu-wrapper.scss
+++ b/src/components/shot-menu/shot-menu-wrapper/shot-menu-wrapper.scss
@@ -28,10 +28,11 @@
 }
 
 .add-remove-menu {
+    @include flex(row, space-evenly, true);
     width: 60%;
 }
 
-@media screen and (min-width: 660px) {
+@media screen and (max-width: 660px) {
     .shot-menu-wrapper {
         width: 85%;
     }
@@ -41,6 +42,6 @@
     }
 
     .add-remove-menu {
-        @include flex(row, space-between, false);
+        width: 100%;
     }
 }
